--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Launcher pour le serveur Mu-Magestic (serveur du MMORPG Mu Online).
+Launcher Mu-Magestic server(French Mu Online server).
 
-Pour plus d'infos, visitez notre site web : http://magestic.eu !
+For more informations, look at our site web : http://magestic.eu !
